tests/unit/compile/cases/syntax-errors/01.text-lt.t
foo < bar
---- THROW% ----
Unexpected <ws " ">; expected: "!" or <HtmlNameWord> near ` bar`
